--- a/support.html
+++ b/support.html
@@ -1,1 +1,50 @@
-support here
+<!DOCTYPE html>
+<html>
+<head>
+    <title>What Have I Eaten - Support</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+    </script>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        #manual {
+            display: none;
+            margin-top: 30px;
+        }
+        .button {
+            display: inline-block;
+            background-color: #007AFF;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 8px;
+            text-decoration: none;
+            margin-top: 20px;
+        }
+        .code {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 4px;
+            font-family: monospace;
+            margin-top: 20px;
+            word-break: break-all;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>What Have I Eaten Support</h1>
+        
+        <div id="manual">
+          Coming Soon...
+        </div>
+    </div>
+</body>
+</html>
