--- a/support.html
+++ b/support.html
@@ -43,7 +43,7 @@
         <h1>What Have I Eaten Support</h1>
         
         <div id="manual">
-          Coming Soon...
+          <div data-tf-live="01JVCYST1QTRYM778Q2HN6JV9X"></div><script src="//embed.typeform.com/next/embed.js"></script>
         </div>
     </div>
 </body>
