--- a/support.html
+++ b/support.html
@@ -37,13 +37,14 @@
             word-break: break-all;
         }
     </style>
+    <script src="//embed.typeform.com/next/embed.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>What Have I Eaten Support</h1>
         
         <div id="manual">
-            <div data-tf-live="01JVCYST1QTRYM778Q2HN6JV9X"></div><script src="//embed.typeform.com/next/embed.js"></script>
+            <div data-tf-live="01JVCYST1QTRYM778Q2HN6JV9X"></div>
         </div>
     </div>
 </body>
