--- a/terms.html
+++ b/terms.html
@@ -1,8 +1,76 @@
-<html>
-  <head>
-    
-  </head>
-  <body>
-    Terms of service coming soon...
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>What Have I Eaten - Terms of Service & Community Guidelines</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: system-ui, sans-serif; margin: 2em; color: #222; background: #fff; }
+    h1, h2, h3 { color: #1a237e; }
+    h1 { font-size: 2em; margin-bottom: 0.5em; }
+    h2 { font-size: 1.3em; margin-top: 2em; }
+    h3 { font-size: 1.1em; margin-top: 1.5em; }
+    ul { margin-left: 1.5em; }
+    .section { margin-bottom: 2em; }
+    .bold { font-weight: bold; }
+  </style>
+</head>
+<body>
+  <h1>Terms of Service &amp; Community Guidelines</h1>
+
+  <div class="section">
+    <h2>Community Guidelines</h2>
+    <h3>1. Be Respectful</h3>
+    <p>Share your food experiences in a respectful and constructive manner. Avoid offensive language and inappropriate content.</p>
+    <h3>2. Food-Focused Content</h3>
+    <p>Keep content focused on food, restaurants, and dining experiences. All photos should be food-related.</p>
+    <h3>3. Authentic Reviews</h3>
+    <p>Share honest, authentic experiences. Avoid spam, fake reviews, or promotional content.</p>
+    <h3>4. Privacy</h3>
+    <p>Respect others' privacy. Don't share personal information or photos of people without consent.</p>
+  </div>
+
+  <div class="section">
+    <h2>Terms of Service</h2>
+    <p class="bold">By using What Have I Eaten, you agree to:</p>
+    <ul>
+      <li>Follow our community guidelines</li>
+      <li>Provide accurate information</li>
+      <li>Not misuse the platform</li>
+      <li>Accept responsibility for your content</li>
+      <li>Allow us to moderate content as needed</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Premium Subscription Terms</h2>
+    <h3>Subscription Plans</h3>
+    <p>What Have I Eaten offers two subscription plans:</p>
+    <ul>
+      <li>Monthly Plan: Automatically renews each month</li>
+      <li>Yearly Plan: Automatically renews each year</li>
+    </ul>
+    <h3>Premium Features</h3>
+    <ul>
+      <li>Private Entries - Keep your food entries private and visible only to you</li>
+      <li>User Profiles - View detailed profiles of other users and their food entries</li>
+      <li>Personalization - Get personalized insights about your food preferences</li>
+      <li>Auto-Tagging - Automatic tagging of your food entries</li>
+      <li>Advanced Analytics - View your food journey on a map with detailed analytics</li>
+    </ul>
+    <h3>Subscription Management</h3>
+    <ul>
+      <li>Subscriptions automatically renew unless auto-renew is turned off at least 24 hours before the end of the current period</li>
+      <li>You can manage and cancel your subscriptions by going to your App Store account settings after purchase</li>
+      <li>Payment will be charged to your Apple ID account at confirmation of purchase</li>
+      <li>Your account will be charged for renewal within 24 hours prior to the end of the current period</li>
+      <li>You can manage and cancel your subscriptions by going to your App Store account settings after purchase</li>
+    </ul>
+    <h3>Refund Policy</h3>
+    <ul>
+      <li>All purchases are final and non-refundable</li>
+      <li>If you have any issues with your subscription, please contact us through the app</li>
+    </ul>
+  </div>
+</body>
 </html>
